// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-panel-frame #render should render component as expected (1) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"header\\"><h1>Header</h1></div><div slot=\\"body\\"><p>Boby</p></div><div slot=\\"footer\\"><footer>footer</footer></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (1) 2`] = `
<section class="gux-panel-container">
  <header class="gux-panel-header">
    <slot name="header"></slot>
  </header>
  <div class="gux-panel-body">
    <slot name="body"></slot>
  </div>
  <footer class="gux-panel-footer">
    <slot name="footer"></slot>
  </footer>
</section>
`;

exports[`gux-panel-frame #render should render component as expected (2) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"body\\"><p>Boby</p></div><div slot=\\"footer\\"><footer>footer</footer></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (2) 2`] = `
<section class="gux-panel-container">
  <div class="gux-panel-body">
    <slot name="body"></slot>
  </div>
  <footer class="gux-panel-footer">
    <slot name="footer"></slot>
  </footer>
</section>
`;

exports[`gux-panel-frame #render should render component as expected (3) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"header\\"><h1>Header</h1></div><div slot=\\"body\\"><p>Boby</p></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (3) 2`] = `
<section class="gux-panel-container">
  <header class="gux-panel-header">
    <slot name="header"></slot>
  </header>
  <div class="gux-panel-body">
    <slot name="body"></slot>
  </div>
</section>
`;

exports[`gux-panel-frame #render should render component as expected (4) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"header\\"><h1>Header</h1></div><div slot=\\"footer\\"><footer>footer</footer></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (4) 2`] = `
<section class="gux-panel-container">
  <header class="gux-panel-header">
    <slot name="header"></slot>
  </header>
  <footer class="gux-panel-footer">
    <slot name="footer"></slot>
  </footer>
</section>
`;

exports[`gux-panel-frame #render should render component as expected (5) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"header\\"><h1>Header</h1></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (5) 2`] = `
<section class="gux-panel-container">
  <header class="gux-panel-header">
    <slot name="header"></slot>
  </header>
</section>
`;

exports[`gux-panel-frame #render should render component as expected (6) 1`] = `"<gux-panel-frame-legacy class=\\"hydrated\\"><div slot=\\"header\\"><h1>Header</h1></div><div slot=\\"body\\"><p>Boby</p></div><div slot=\\"invalid\\" id=\\"invalid\\"><span>Invalid</span></div><div slot=\\"footer\\"><footer>footer</footer></div></gux-panel-frame-legacy>"`;

exports[`gux-panel-frame #render should render component as expected (6) 2`] = `
<section class="gux-panel-container">
  <header class="gux-panel-header">
    <slot name="header"></slot>
  </header>
  <div class="gux-panel-body">
    <slot name="body"></slot>
  </div>
  <footer class="gux-panel-footer">
    <slot name="footer"></slot>
  </footer>
</section>
`;
